--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
     "@radix-ui/react-popover": "1.0.3",
@@ -29,6 +32,7 @@
     "eslint-config-next": "13.1.1",
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.2",
+    "js-cookie": "^3.0.5",
     "keen-slider": "^6.8.5",
     "lucide-react": "0.105.0-alpha.4",
     "ms": "^2.1.3",
